- fixing docker issues - fixing spring scanning issue - added repository module without testing
